--- a/Core/packages.config
+++ b/Core/packages.config
@@ -6,10 +6,15 @@
   <package id="AutoMapper" version="4.0.4" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc.Futures" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MvcSiteMapProvider.MVC5" version="4.6.18" targetFramework="net45" />
+  <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.18" targetFramework="net45" />
+  <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net45" />
   <package id="NPOI" version="2.1.3.1" targetFramework="net45" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="System.Linq.Dynamic" version="1.0.4" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.1" targetFramework="net45" />
 </packages>
