--- a/BaseProject.Admin/BaseProject.Admin.csproj
+++ b/BaseProject.Admin/BaseProject.Admin.csproj
@@ -231,6 +231,12 @@
     <Compile Include="AspNetRoles.cs">
       <DependentUpon>BaseProject.tt</DependentUpon>
     </Compile>
+    <Compile Include="AspNetUserClaims.cs">
+      <DependentUpon>BaseProject.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AspNetUserLogins.cs">
+      <DependentUpon>BaseProject.tt</DependentUpon>
+    </Compile>
     <Compile Include="AspNetUsers.cs">
       <DependentUpon>BaseProject.tt</DependentUpon>
     </Compile>
@@ -258,6 +264,9 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CodeMainController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="C__MigrationHistory.cs">
+      <DependentUpon>BaseProject.tt</DependentUpon>
+    </Compile>
     <Compile Include="DI\Autofac\Modules\CustomAclModule.cs" />
     <Compile Include="DI\Autofac\Modules\MvcModule.cs" />
     <Compile Include="DI\Autofac\Modules\MvcSiteMapProviderModule.cs" />
@@ -265,6 +274,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509091806569_Name.cs" />
+    <Compile Include="Migrations\201509091806569_Name.Designer.cs">
+      <DependentUpon>201509091806569_Name.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolesOperationPermission.cs">
       <DependentUpon>BaseProject.tt</DependentUpon>
@@ -347,6 +361,11 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201509091806569_Name.resx">
+      <DependentUpon>201509091806569_Name.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
