--- a/BaseProject.Admin/Web.config
+++ b/BaseProject.Admin/Web.config
@@ -10,6 +10,7 @@
     <section name="system.identityModel" type="System.IdentityModel.Configuration.SystemIdentityModelSection, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=114.33.60.51\SQLEXPRESS;initial catalog=BaseProject;persist security info=True;user id=BaseAdmin;password=1q2w3e4r" providerName="System.Data.SqlClient" />
     <add name="BaseProjectEntities" connectionString="metadata=res://*/BaseProject.csdl|res://*/BaseProject.ssdl|res://*/BaseProject.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=114.33.60.51\SQLEXPRESS;initial catalog=BaseProject;user id=BaseAdmin;password=1q2w3e4r;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
@@ -95,7 +96,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v12.0" />
+        <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
