--- a/BaseProject.Admin/BaseProject.Admin.csproj
+++ b/BaseProject.Admin/BaseProject.Admin.csproj
@@ -198,35 +198,10 @@
     </None>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <None Include="Scripts\jquery-2.1.4-vsdoc.js" />
-    <Content Include="Scripts\bootstrap-colorpicker.js" />
-    <Content Include="Scripts\bootstrap-multiselect.js" />
-    <Content Include="Scripts\bootstrap-tag.js" />
-    <Content Include="Scripts\bootstrap-wysiwyg.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
-    <Content Include="Scripts\jquery-ui.custom.js" />
-    <Content Include="Scripts\jquery-ui.js" />
-    <Content Include="Scripts\jquery.autosize.js" />
-    <Content Include="Scripts\jquery.bootstrap-duallistbox.js" />
-    <Content Include="Scripts\jquery.colorbox.js" />
-    <Content Include="Scripts\jquery.easypiechart.js" />
-    <Content Include="Scripts\jquery.gritter.js" />
-    <Content Include="Scripts\jquery.hotkeys.js" />
-    <Content Include="Scripts\jquery.inputlimiter.1.3.1.js" />
-    <Content Include="Scripts\jquery.js" />
-    <Content Include="Scripts\jquery.knob.js" />
-    <Content Include="Scripts\jquery.maskedinput.js" />
-    <Content Include="Scripts\jquery.mobile.custom.js" />
-    <Content Include="Scripts\jquery.mousewheel.js" />
-    <Content Include="Scripts\jquery.nestable.js" />
-    <Content Include="Scripts\jquery.raty.js" />
-    <Content Include="Scripts\jquery.slimscroll.js" />
-    <Content Include="Scripts\jquery.sparkline.js" />
-    <Content Include="Scripts\jquery.ui.touch-punch.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery1x.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Views\Shared\DisplayTemplates\CanonicalHelperModel.ascx" />
     <Content Include="Views\Shared\DisplayTemplates\MenuHelperModel.ascx" />
@@ -266,10 +241,6 @@
     <Compile Include="Security\ViewModel\Create.cs" />
     <Compile Include="Security\ViewModel\Detail.cs" />
     <Compile Include="Security\ViewModel\Edit.cs" />
-    <Compile Include="Service\CodeMainService.cs" />
-    <Compile Include="Service\ICodeMainService.cs" />
-    <Compile Include="Service\IUserOpertationLogService.cs" />
-    <Compile Include="Service\UserOpertationLogService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Account\AccountViewModels.cs" />
     <Compile Include="ViewModels\Account\AdminViewModel.cs" />
@@ -335,6 +306,10 @@
     <ProjectReference Include="..\BaseProject.Model\BaseProject.Model.csproj">
       <Project>{f3f372be-d142-47bd-8cc5-86dbbe15e388}</Project>
       <Name>BaseProject.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BaseProject\BaseProject.csproj">
+      <Project>{152a4f2f-efbb-44a2-8bff-05a618889acc}</Project>
+      <Name>BaseProject</Name>
     </ProjectReference>
     <ProjectReference Include="..\Core.Common\Core.Common.csproj">
       <Project>{c9b0c421-b7c4-4101-803d-ebd4264219eb}</Project>
